Add reminder templates, retry service, contact-upload links, branch workspaces
- Reminder templates split from reminder runs, with approval and draft states
- Message retry service for resending failed messages, including to a
  corrected number
- Contact-upload link table so a contact can belong to multiple uploads,
  fixing recipients disappearing from older campaigns
- Workspace branch/division hierarchy: umbrella workspaces holding no data,
  branches inheriting the umbrella's permissions
- Single workspace membership enforcement, graceful delegate demotion instead
  of removal when delegation is disabled
- Campaign approval transitions made tier-agnostic so an in-flight campaign
  survives a workspace's delegation setting changing, plus auto-finalize for
  campaigns stranded at the delegate tier
- Super admin visibility across all workspaces for reminders and contact
  groups
- Campaign cancel while queued, restricted to department heads